# project_informer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr_review.yml
docs/: architecture.md  usage.md
src/project_informer/: __init__.py  cli.py  doc_generator.py  help_engine.py  llm.py  pr_reviewer.py  web.py
src/project_informer/mcp_server/: server.py
src/project_informer/rag/: indexer.py  query.py
src/project_informer/static/: index.html
