[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-informer"
version = "0.1.0"
description = "AI-powered developer assistant that understands your project"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "click>=8.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "mcp>=1.2.0",
    "openai>=1.0.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
project-informer = "project_informer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
